[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "combined-energy-api"
description = "Python interface to the Combined.Energy API"
version = "1.0"
requires-python = "~=3.8"
dependencies= [
  "aiohttp",
  "pydantic"
]

[tool.setuptools.packages.find]
where = ["src"]
