[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "combined-energy-api"
version = "0.5"
description = "Python interface to the Combined Energy API"
authors = ["Tim Savage <tim@savage.company>"]
maintainers = ["Tim Savage <tim@savage.company>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/timsavage/combined-energy-api"
repository = "https://github.com/timsavage/combined-energy-api"
documentation = "https://github.com/timsavage/combined-energy-api"
keywords = ["energy", "monitoring", "combined.energy", "api", "client", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [
    { include = "combined_energy", from = "src" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "*"
pydantic = "*"

[tool.poetry.dev-dependencies]
aresponses = "*"
pytest = "^7.0"
pytest-cov = "*"
pytest-asyncio = "*"

[tool.black]
target-version = ["py38", "py39", "py310"]

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
forced_separate = [
    "tests",
]
combine_as_imports = true
